--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
   }
   
   body {
-    font-family: 'Be Vietnam Pro', sans-serif;
+    font-family: "helvetica";
   }
   :root {
     --primary-color: #605DC8;
