--- a/src/app/shared/layouts/header/header.component.html
+++ b/src/app/shared/layouts/header/header.component.html
@@ -14,19 +14,27 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Laptops</a>
+            <a class="nav-link" routerLink="/laptops">Laptops</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Mobiles</a>
+            <a class="nav-link" routerLink="/mobiles">Mobiles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Tablets</a>
+            <a class="nav-link" routerLink="/tablets">Tablets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/products">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/cart">Cart</a> <!-- Link to Cart -->
           </li>
         </ul>
+        
   
+
         <!-- Search Box (Right-aligned) -->
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
