made checkout, product search, user registration and user class and service

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -13,3 +13,4 @@
 <p *ngIf="cartItems.length > 0">Total Cost: ${{ getTotalCost() }}</p>
 
 <button *ngIf="cartItems.length > 0" (click)="clearCart()">Clear Cart</button>
+<a routerLink="/checkout">Proceed to Checkout</a>
